compiler/testData/cli/jvm/internalArgEmptyFeatureName.out
warning: ATTENTION!
This build uses internal compiler arguments:

-XXLanguage:+

This mode is strictly prohibited for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

warning: empty language feature name for internal argument '-XXLanguage:+'
compiler/testData/cli/jvm/inlineClass.kt:1:1: error: the feature "inline classes" is experimental and should be enabled explicitly
inline class Foo(val x: Int)
^
COMPILATION_ERROR
